style fix for visible scrollbar

--- a/app/_styles/globals.scss
+++ b/app/_styles/globals.scss
@@ -27,4 +27,9 @@ canvas {
 main {
   width: 100%;
   height: 100%;
+  ::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
