--- a/app/_styles/section.module.scss
+++ b/app/_styles/section.module.scss
@@ -3,9 +3,14 @@
   position: relative;
   margin: var(--header-height) auto 0 auto;
   width: 95%;
-  
   max-width: 1200px;
   height: calc(100vh - var(--header-height) - var(--footer-height));
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .header {
@@ -37,7 +42,8 @@
     text-decoration: underline;
     text-underline-offset: 0.3rem;
   }
-  a:active, a:focus {
+  a:active,
+  a:focus {
     text-decoration: none;
     outline: none;
     color: var(--background);
